[package]
name = "aibim-sdk"
version = "0.1.0"
edition = "2021"
description = "AIBIM SDK — Route LLM traffic through AI security proxy for prompt injection detection"
license = "MIT"
repository = "https://github.com/aibim-ai/rust-sdk"
homepage = "https://aibim.ai"
keywords = ["ai", "security", "llm", "proxy", "prompt-injection"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[[example]]
name = "basic_proxy"
path = "examples/basic_proxy.rs"

[[example]]
name = "direct_analysis"
path = "examples/direct_analysis.rs"

[[example]]
name = "management_api"
path = "examples/management_api.rs"
